Add early implementation of the base station

--- a/ground_system/griffon_ground_control/settings.gradle
+++ b/ground_system/griffon_ground_control/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'griffon-ground-control'
 rootProject.name = 'griffon-ground-control'
 
+include "base-trx"
+project(':base-trx').projectDir = new File('C:/Users/amk19/IdeaProjects/project_griffon/ground_system/base_trx')
