--- a/ground_system/griffon_ground_control/build.gradle
+++ b/ground_system/griffon_ground_control/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "com.sparkjava:spark-core:2.7.1"
+    compile 'com.google.code.gson:gson:2.8.2'
     compileOnly 'org.projectlombok:lombok:1.16.18'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
