--- a/drone_system/main_flight_controller/build.gradle
+++ b/drone_system/main_flight_controller/build.gradle
@@ -19,6 +19,9 @@ jar {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    // https://mvnrepository.com/artifact/org.scream3r/jssc
+    compile group: 'org.scream3r', name: 'jssc', version: '2.8.0'
+
     compile 'com.google.code.gson:gson:2.8.2'
     compileOnly 'org.projectlombok:lombok:1.16.18'
 }
