--- a/ground_system/griffon_ground_control/build.gradle
+++ b/ground_system/griffon_ground_control/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     compileOnly 'org.projectlombok:lombok:1.16.18'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.mockito:mockito-core:2.+"
 }
