--- a/drone_system/main_flight_controller/build.gradle
+++ b/drone_system/main_flight_controller/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile group: 'org.scream3r', name: 'jssc', version: '2.8.0'
 
     compile 'com.google.code.gson:gson:2.8.2'
+    testCompile "org.mockito:mockito-core:2.+"
     compileOnly 'org.projectlombok:lombok:1.16.18'
 }
